--- a/produccion_2/index.html
+++ b/produccion_2/index.html
@@ -68,7 +68,6 @@
           src="images/logo-avatar.png"
           style="width: 35%; height: auto; padding: 10px 0px 10px 0px"
           alt="Logo de avatar la leyenda de Aang"
-          
         />
         <button
           class="navbar-toggler"
@@ -84,13 +83,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Inicio</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="backstage.html">Backstage</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="datos-historicos.html">Datos historicos</a>
+              <a class="nav-link" href="datos-historicos.html"
+                >Datos historicos</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="juego.html">Juego</a>
@@ -101,7 +104,7 @@
     </nav>
 
     <!--Header desktop-->
-    <section class="header-desktop">
+    <div class="header-desktop">
       <div class="card">
         <div class="card-overlay">
           <img
@@ -118,13 +121,13 @@
           />
         </div>
         <div class="card-img-overlay">
-          <h1 class="text-center">Avatar: La Leyenda De Aang</h1>
+          <h1 class="text-center espacio js-scroll fade-in"">Avatar: La Leyenda De Aang</h1>
         </div>
       </div>
-    </section>
+    </div>
 
     <!--header mobile-->
-    <section class="header-mobile">
+    <div class="header-mobile">
       <div class="card">
         <div class="card-overlay">
           <img
@@ -140,13 +143,13 @@
           />
         </div>
         <div class="card-img-overlay">
-          <h1 class="text-center">Avatar: La Leyenda De Aang</h1>
+          <h1 class="text-center espacio js-scroll fade-in"">Avatar: La Leyenda De Aang</h1>
         </div>
       </div>
-    </section>
+    </div>
 
     <!--header tablet-->
-    <section class="header-tablet">
+    <div class="header-tablet">
       <div class="card">
         <div class="card-overlay">
           <img
@@ -162,25 +165,24 @@
           />
         </div>
         <div class="card-img-overlay">
-          <h1 class="text-center">Avatar: La Leyenda De Aang</h1>
+          <h1 class="text-center espacio js-scroll fade-in"">Avatar: La Leyenda De Aang</h1>
         </div>
       </div>
-    </section>
+    </div>
 
     <!--Inicio de la sección número dos-->
-    <section class="padding" id="background-intro">
+    <section id="background-intro">
       <div class="container">
         <div class="row row-cols-1 row-cols-md-2">
-          <div class="col">
+          <div class="col order-2 order-md-1 js-scroll slide-left">
             <img
               src="images/katara.png"
               style="width: 60%; height: auto"
               alt="katara de la tribu agua"
-              class="katara"
             />
           </div>
-          <div class="col">
-            <figure class="text-end">
+          <div class="col order-1 order-md-2 js-scroll slide-right ">
+            <figure class="text-end ">
               <blockquote class="blockquote">
                 <p>
                   “Hace muchos años las cuatro naciones vivían en armonía, pero
@@ -210,14 +212,14 @@
     </section>
 
     <!--Inicia la sección número tres-->
-    <section class="padding patron" id="background-reparto">
-      <h2 style="text-align: center">Reparto y equipo</h2>
+    <section class="patron" id="background-reparto">
+      <h2 class="espacio js-scroll fade-in"" style="text-align: center">Reparto y equipo</h2>
       <!--Cards-->
-      <div class="row mx-auto my-auto justify-content-center">
+      <div class="row mx-auto my-auto justify-content-center js-scroll fade-in">
         <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active mb-3 mx-3">
-              <div class="col-md-3 px-3">
+              <div class="col-sm-12 col-md-6 col-lg-3 px-3">
                 <a href="backstage.html#Zach-Tyler-Eisen">
                   <div class="card shadow h-100">
                     <img
@@ -239,7 +241,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="col-md-3 px-3">
+              <div class="col-sm-12 col-md-6 col-lg-3 px-3">
                 <a href="backstage.html#Mae-Whitman">
                   <div class="card shadow h-100">
                     <img
@@ -261,7 +263,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="col-md-3 px-3">
+              <div class="col-sm-12 col-md-6 col-lg-3 px-3">
                 <a href="backstage.html#Zach-Tyler-Eisen">
                   <div class="card shadow h-100">
                     <img
@@ -283,7 +285,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="col-md-3 px-3">
+              <div class="col-sm-12 col-md-6 col-lg-3 px-3">
                 <a href="backstage.html#Jessie-Flower">
                   <div class="card shadow h-100">
                     <img
@@ -305,7 +307,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="col-md-3 px-3">
+              <div class="col-sm-12 col-md-6 col-lg-3 px-3">
                 <a href="backstage.html#Dante-Basco">
                   <div class="card shadow h-100">
                     <img
@@ -327,7 +329,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="col-md-3 px-3">
+              <div class="col-sm-12 col-md-6 col-lg-3 px-3">
                 <a href="backstage.html#Grey-DeLisle">
                   <div class="card shadow h-100">
                     <img
@@ -351,7 +353,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="col-md-3 px-3">
+              <div class="col-sm-12 col-md-6 col-lg-3 px-3">
                 <a href="backstage.html#Mark-Hamill">
                   <div class="card shadow h-100">
                     <img
@@ -375,7 +377,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="col-md-3 px-3">
+              <div class="col-sm-12 col-md-6 col-lg-3 px-3">
                 <a href="backstage.html#Bryan-Konietzko">
                   <div class="card shadow h-100">
                     <img
@@ -397,7 +399,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="col-md-3 px-3">
+              <div class="col-sm-12 col-md-6 col-lg-3 px-3">
                 <a href="backstage.html#Michael-Dante">
                   <div class="card shadow h-100">
                     <img
@@ -440,60 +442,68 @@
     </section>
 
     <!--Inicio la sección número cuatro-->
-    <section class="padding" id="background-reconociminetos">
-      <h2 style="text-align: center">Reconocimientos</h2>
-      <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col">
-          <div class="card shadow">
-            <img
-              src="images/reconocimiento.png"
-              class="reconocimiento"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Mejor serie de TV</h5>
-              <p class="card-text">Premios Pulcinella 2005</p>
+    <section id="background-reconociminetos">
+      <h2 class="espacio js-scroll fade-in"" style="text-align: center">Reconocimientos</h2>
+
+      <div class="container">
+        <div class="row row-gap-5">
+          <div class="col-sm-8 col-md-6 col-lg-3 js-scroll slide-left">
+            <div class="card shadow">
+              <img
+                src="images/reconocimiento.png"
+                class="reconocimiento"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Mejor serie de TV</h5>
+                <p class="card-text">Premios Pulcinella 2005</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card shadow">
-            <img
-              src="images/reconocimiento.png"
-              class="reconocimiento"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Mejor personaje animado en televisión</h5>
-              <p class="card-text">Premios Annie edición 34</p>
+
+          <div class="col-sm-12 col-md-6 col-lg-3 js-scroll fade-in-bottom">
+            <div class="card shadow">
+              <img
+                src="images/reconocimiento.png"
+                class="reconocimiento"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">
+                  Mejor personaje animado en televisión
+                </h5>
+                <p class="card-text">Premios Annie edición 34</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card shadow">
-            <img
-              src="images/reconocimiento.png"
-              class="reconocimiento"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Premio al logro individual</h5>
-              <p class="card-text">Premios Primetime Emmy</p>
+
+          <div class="col-sm-12 col-md-6 col-lg-3 js-scroll fade-in-bottom">
+            <div class="card shadow">
+              <img
+                src="images/reconocimiento.png"
+                class="reconocimiento"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Premio al logro individual</h5>
+                <p class="card-text">Premios Primetime Emmy</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card shadow">
-            <img
-              src="images/reconocimiento.png"
-              class="reconocimiento"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">
-                Mejor Storyboard en una serie animada de TV
-              </h5>
-              <p class="card-text">Premios Annie edición 33</p>
+
+          <div class="col-sm-12 col-md-6 col-lg-3 js-scroll slide-right">
+            <div class="card shadow">
+              <img
+                src="images/reconocimiento.png"
+                class="reconocimiento"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">
+                  Mejor Storyboard en una serie animada de TV
+                </h5>
+                <p class="card-text">Premios Annie edición 33</p>
+              </div>
             </div>
           </div>
         </div>
@@ -501,11 +511,13 @@
     </section>
 
     <!--Inicio la sección número cinco-->
-    <section class="padding" id="background-novedades">
-      <h2 style="color: rgb(255, 255, 255); text-align: center">Novedades</h2>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
+    <section id="background-novedades">
+      <h2 class="espacio js-scroll fade-in"" style="color: rgb(255, 255, 255); text-align: center">
+        Novedades
+      </h2>
+      <div class="row row-cols-1 g-4">
         <div class="col mb-4 col-12 col-lg-4">
-          <div class="card shadow">
+          <div class="card shadow scroll-element js-scroll slide-left">
             <img
               src="images/gordon-cormier.jpg"
               class="card-img-top"
@@ -519,50 +531,57 @@
               </p>
             </div>
             <div class="card-footer">
-              <a href="#" class="card-link">Seguir leyendo </a>
+              <a
+                href="https://www.espinof.com/netflix/series-animacion-aclamadas-vuelve-su-live-action-netflix-desvela-primeras-imagenes-avatar-leyenda-aang"
+                class="card-link"
+                >Seguir leyendo
+              </a>
             </div>
           </div>
         </div>
-          <div class="col mb-4 col-12 col-lg-4">
-            <div class="card shadow">
-              <img
-                src="images/adult-avatar.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body h-100">
-                <h5 class="card-title">
-                  Avatar la pelicula: Se revelan personajes y edades
-                </h5>
-                <p class="card-text">
-                  Conoce los personajes confirmados que participaran en la nueva
-                  pelicula de Avatar.
-                </p>
-              </div>
-              <div class="card-footer">
-                <a href="#" class="card-link">Seguir leyendo</a>
-              </div>
+        <div class="col mb-4 col-12 col-lg-4 js-scroll fade-in-bottom">
+          <div class="card shadow">
+            <img
+              src="images/adult-avatar.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body h-100">
+              <h5 class="card-title">
+                Avatar la pelicula: Se revelan personajes y edades
+              </h5>
+              <p class="card-text">
+                Conoce los personajes confirmados que participaran en la nueva
+                pelicula de Avatar.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a
+                href="https://www.nacionflix.com/cine/La-nueva-pelicula-animada-de-Avatar-La-Leyenda-de-Aang-se-ambienta-12-anos-despues-de-la-serie-20230304-0008.html"
+                class="card-link"
+                >Seguir leyendo</a
+              >
             </div>
           </div>
-          <div class="col mb-4 col-12 col-lg-4">
-            <div class="card shadow">
-              <img
-                src="images/equipo-aang.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body h-100">
-                <h5 class="card-title">
-                  ¡El equipo Aang regresa a las pantallas!
-                </h5>
-                <p class="card-text">
-                  Recientemente los directores originales de la serie
-                  confirmaron estar trabajando en una trilogiía de peliculas.
-                </p>
-              </div>
-              <div class="card-footer">
-                <a href="#" class="card-link">Seguir leyendo </a>
-              </div>
+        </div>
+        <div class="col mb-4 col-12 col-lg-4 js-scroll slide-right">
+          <div class="card shadow element-r">
+            <img src="images/equipo-aang.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body h-100">
+              <h5 class="card-title">
+                ¡El equipo Aang regresa a las pantallas!
+              </h5>
+              <p class="card-text">
+                Recientemente los directores originales de la serie confirmaron
+                estar trabajando en una trilogía de peliculas.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a
+                href="https://www.hobbyconsolas.com/noticias/avatar-leyenda-aang-leyenda-korra-tendran-3-peliculas-animacion-1079601"
+                class="card-link"
+                >Seguir leyendo
+              </a>
             </div>
           </div>
         </div>
@@ -571,7 +590,7 @@
 
     <!--Call To Action-->
     <section id="cta-desktop">
-      <div class="container text-left">
+      <div class="container text-left js-scroll fade-in">
         <div class="row align-items-start">
           <div class="col">
             <img
@@ -594,7 +613,7 @@
 
     <!--Call To Action Mobile-->
     <section id="cta-mobile">
-      <div class="container text-left">
+      <div class="container text-left js-scroll fade-in">
         <div class="row align-items-start">
           <div class="col">
             <h2 style="color: white">¿Estas listo para salvar el mundo?</h2>
@@ -642,14 +661,62 @@
         }
       });
     </script>
+    <script>
+      const scrollElements = document.querySelectorAll(".js-scroll");
+
+      const elementInView = (el, dividend = 1) => {
+        const elementTop = el.getBoundingClientRect().top;
+
+        return (
+          elementTop <=
+          (window.innerHeight || document.documentElement.clientHeight) /
+            dividend
+        );
+      };
+
+      const elementOutofView = (el) => {
+        const elementTop = el.getBoundingClientRect().top;
+
+        return (
+          elementTop >
+          (window.innerHeight || document.documentElement.clientHeight)
+        );
+      };
+
+      const displayScrollElement = (element) => {
+        element.classList.add("scrolled");
+      };
+
+      const hideScrollElement = (element) => {
+        element.classList.remove("scrolled");
+      };
+
+      const handleScrollAnimation = () => {
+        scrollElements.forEach((el) => {
+          if (elementInView(el, 1.25)) {
+            displayScrollElement(el);
+          } else if (elementOutofView(el)) {
+            hideScrollElement(el);
+          }
+        });
+      };
+
+      window.addEventListener("scroll", () => {
+        handleScrollAnimation();
+      });
+    </script>
   </body>
   <footer>
     <div class="redes">
-      <i class="fa-brands fa-instagram fa-xl" style="color: #000000"></i>
-      <i class="fa-regular fa-envelope fa-xl" style="color: #000000"></i>
-      <i class="fa-brands fa-spotify fa-xl" style="color: #000000"></i>
+      <a href="https://www.instagram.com/avatarthelastairbender/"
+        ><i class="fa-brands fa-instagram fa-xl" style="color: #000000"></i
+      ></a>
+      <a
+        href="https://open.spotify.com/playlist/5CVb6WwHvrvBJS4XhLKrmp?si=c663d0be5149418f"
+        ><i class="fa-brands fa-spotify fa-xl" style="color: #000000"></i
+      ></a>
     </div>
-    <p>Terminos y condiciones | Politicas de privaciadad</p>
+    <p><a href="error.html"> Terminos y condiciones</a><a href="error.html"> | Politicas de privaciadad</a></p>
     <p>2023 Francis Rodriguez</p>
   </footer>
 </html>
