--- a/produccion_2/datos-historicos.html
+++ b/produccion_2/datos-historicos.html
@@ -167,13 +167,13 @@
           </div>
           <div class="col text-end js-scroll slide-right">
             <iframe
-              width="560"
-              height="315"
+
               src="https://www.youtube.com/embed/gCt4GJivn5U?start=100"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen
+              class="video-vertical"
             ></iframe>
           </div>
         </div>
