--- a/produccion_2/juego.html
+++ b/produccion_2/juego.html
@@ -171,7 +171,7 @@
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
-          class="trailer js-scroll fade-in-bottom"
+          class="js-scroll fade-in-bottom"
         ></iframe>
       </div>
     </section>
